--- a/BlazorShop/BlazorShop/Client/wwwroot/css/app.css
+++ b/BlazorShop/BlazorShop/Client/wwwroot/css/app.css
@@ -63,3 +63,25 @@ a, .btn-link {
         content: "An error has occurred."
     }
 
+.popupCreate {
+     position: fixed;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     background-color: ghostwhite;
+     width:max-content;
+     height: max-content;
+     padding: 40px;
+     border-radius: 20px;
+     z-index: 3;
+}
+
+.backroundPopup {
+     position: fixed;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     z-index: 2;
+     background-color: rgb(128, 128, 128)
+}
